--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4",
-    "gsap": "^1.20.0"
+    "gsap": "^1.20.0",
+    "font-awesome": "^4.7.0"
   },
   "devDependencies": {
     "@angular/cli": "1.2.1",
